--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: MBDyn
 description: >- # this means to ignore newlines until "baseurl:"
   MBDyn home page
 baseurl: "/MBDyn-web" # the subpath of your site, e.g. /blog
-url: "www.rtai.org" # the base hostname & protocol for your site, e.g. http://example.com
+url: "www.mbdyn.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username:  
 
