--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: MBDyn
 description: >- # this means to ignore newlines until "baseurl:"
-  MBDyn home page
+  MBDyn Website
 baseurl: "/MBDyn-web" # the subpath of your site, e.g. /blog
 url: "www.mbdyn.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
